--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+sudo: false
 
 php:
   - 5.4
@@ -8,11 +9,13 @@ mysql:
   username: root
   encoding: utf8
 
-before_install:
-  - sudo apt-get update > /dev/null
+addons:
+  apt:
+    packages:
+      - php5-cgi
+      - php5-mysql
 
 install:
-  - sudo apt-get install -y --force-yes php5-cgi php5-mysql
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - composer global require drush/drush:6.*
 
