--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 sudo: false
 
 php:
-  - 5.4
   - 7.0
 
 mysql:
@@ -18,24 +17,24 @@ addons:
 
 install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - composer global require drush/drush:6.*
+  - composer global require drush/drush:8.1.* phpunit/phpunit:6.4.*
 
 before_script:
-  - form_builder=`pwd`
+  - repo=`pwd`
   - cd ..
   - git clone https://github.com/torotil/upal.git
   - upal=`pwd`/upal
   - mysql -e 'create database drupal'
-  - php -d sendmail_path=`which true` ~/.composer/vendor/bin/drush.php --yes core-quick-drupal --profile=testing --no-server --db-url=mysql://root:@127.0.0.1/drupal --enable=simpletest form_builder_test
-  - ln -s $form_builder form_builder_test/drupal/sites/all/modules/form_builder
-  - cd form_builder_test/drupal
+  - php -d include_path=`pwd` -d sendmail_path=`which true` ~/.composer/vendor/bin/drush.php --yes core-quick-drupal --core=drupal-7.x --profile=testing --no-server --db-url=mysql://root:@127.0.0.1/drupal --root=`pwd`/test-root
+  - ln -s $repo test-root/sites/all/modules/form_builder
+  - cd test-root
   - root=`pwd`
-  - drush dl webform-7.x-3.x ctools options_element
+  - drush dl webform-7.x-4.x ctools options_element
   - drush --yes pm-enable form_builder_webform form_builder_examples
 
 script:
-  - cd $form_builder
-  - UPAL_ROOT=$root UPAL_DB_URL=mysql://root:@127.0.0.1/drupal UPAL_WEB_URL=http://127.0.0.1 phpunit -c phpunit.xml.dist --bootstrap $upal/bootstrap.php --coverage-clover=coverage.xml $form_builder/tests
+  - cd $repo
+  - UPAL_ROOT=$root UPAL_DB_URL=mysql://root:@127.0.0.1/drupal UPAL_WEB_URL=http://127.0.0.1 phpunit -c phpunit.xml.dist --bootstrap $upal/bootstrap.php --coverage-clover=coverage.xml .
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
