--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: php
-sudo: false
+services:
+  - mysql
 
 php:
-  - 7.0
+  - 7.1
 
 mysql:
   database: drupal
@@ -16,7 +17,7 @@ cache:
 
 install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - composer global require drush/drush:8.1.* torotil/upal:1.1.3
+  - composer global require drush/drush:8.1.* torotil/upal:1.1.3 phpunit/phpunit:6.4.*
 
 before_script:
   - repo=`pwd`
