--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache:
 
 install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - composer global require drush/drush:8.1.* torotil/upal:1.1.3 phpunit/phpunit:6.4.*
+  - composer global require drush/drush:8.1.* torotil/upal:1.2.0 phpunit/phpunit:6.4.*
 
 before_script:
   - repo=`pwd`
@@ -26,7 +26,7 @@ before_script:
   - php -d include_path=`pwd` -d sendmail_path=`which true` ~/.composer/vendor/bin/drush.php --yes core-quick-drupal --core=drupal-7.x --profile=testing --no-server --db-url=mysql://root:@127.0.0.1/drupal --root=$root
   - ln -s $repo $root/sites/all/modules/module_under_test
   - cd $root
-  - drush dl webform ctools options_element psr0
+  - drush dl --cache-duration-releasexml=0 webform ctools options_element psr0 views
   - drush --yes pm-enable form_builder_webform form_builder_examples
 
 script:
