--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,6 @@
 <!-- Copy and rename to phpunit.xml. Customize as needed. -->
 <phpunit backupGlobals="false"
-    backupStaticAttributes="false"
-    syntaxCheck="false">
-  <php>
-    <!--User must have write permissions to this directory.-->
-    <!--If not supplied, defaults to sys_get_tmp_dir().-->
-    <!-- <var name="UPAL_TMP" value="/tmp"/> -->
-
-    <!--Uncomment the line below if your path to drush differs from `which drush`. Use absolute path.-->
-    <!--You currently need 'master' branch of drush after 2011.07.21. Drush 4.6 will be OK - http://drupal.org/node/1105514-->
-    <!--<var name="UNISH_DRUSH" value="/Users/mw/bin/drush"/>-->
-
-  </php>
+    backupStaticAttributes="false">
 
 <filter>
   <whitelist processUncoveredFilesFromWhitelist="true" addUncoveredFilesFromWhitelist="true">
@@ -19,14 +8,18 @@
     <directory suffix=".inc">.</directory>
     <directory suffix=".module">.</directory>
     <exclude>
+      <directory suffix="Drupal.php">.</directory>
       <directory suffix="Test.php">.</directory>
       <directory suffix=".api.php">.</directory>
       <directory suffix=".tpl.php">.</directory>
       <directory suffix=".features.inc">.</directory>
       <directory suffix=".features.field_base.inc">.</directory>
       <directory suffix=".features.field_instance.inc">.</directory>
+      <directory suffix=".features.filter.inc">.</directory>
       <directory suffix=".features.taxonomy.inc">.</directory>
       <directory suffix=".features.uuid_term.inc">.</directory>
+      <directory suffix=".field_group.inc">.</directory>
+      <directory suffix=".strongarm.inc">.</directory>
     </exclude>
   </whitelist>
 </filter>
